// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Button 1`] = `
<button
  className="button base work primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small uppercase white"
  >
    Submit
  </span>
</button>
`;

exports[`renders a Button with a link and opens in new tab 1`] = `
<a
  className="button base work primary"
  disabled={false}
  href="💩.com"
  target="_blank"
>
  <span
    className="base extraBold small uppercase white"
  >
    Submit
  </span>
</a>
`;

exports[`renders a Button with a loading state 1`] = `
<button
  className="button base work primary loading"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small uppercase white"
  >
    Adding
  </span>
</button>
`;

exports[`renders a Button with an icon 1`] = `
<button
  className="button base hasIcon work primary"
  disabled={false}
  type="button"
>
  <svg
    className="icon base"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className="white"
      d="M512 128c-23.565 0-42.667 19.103-42.667 42.667v298.667h-298.667c-23.564 0-42.667 19.102-42.667 42.667s19.103 42.667 42.667 42.667h298.667v298.667c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-298.667h298.667c23.565 0 42.667-19.102 42.667-42.667s-19.102-42.667-42.667-42.667h-298.667v-298.667c0-23.564-19.102-42.667-42.667-42.667z"
    />
  </svg>
  <span
    className="base extraBold small uppercase white"
  >
    Add
  </span>
</button>
`;

exports[`renders a Button with an icon on the right 1`] = `
<button
  className="button base hasIcon iconOnRight work primary"
  disabled={false}
  type="button"
>
  <svg
    className="icon base"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className="white"
      d="M512 128c-23.565 0-42.667 19.103-42.667 42.667v298.667h-298.667c-23.564 0-42.667 19.102-42.667 42.667s19.103 42.667 42.667 42.667h298.667v298.667c0 23.565 19.102 42.667 42.667 42.667s42.667-19.102 42.667-42.667v-298.667h298.667c23.565 0 42.667-19.102 42.667-42.667s-19.102-42.667-42.667-42.667h-298.667v-298.667c0-23.564-19.102-42.667-42.667-42.667z"
    />
  </svg>
  <span
    className="base extraBold small uppercase white"
  >
    Add
  </span>
</button>
`;

exports[`renders a Link as a Button for routing 1`] = `
<a
  className="button base work primary"
  disabled={false}
  href="/jobber"
  onClick={[Function]}
>
  <span
    className="base extraBold small uppercase white"
  >
    Adding
  </span>
</a>
`;

exports[`renders a cancel Button 1`] = `
<button
  className="button base cancel primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small uppercase greyBlue"
  >
    Submit
  </span>
</button>
`;

exports[`renders a destructuve Button 1`] = `
<button
  className="button base destructive primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small uppercase white"
  >
    Submit
  </span>
</button>
`;

exports[`renders a disabled Button 1`] = `
<button
  className="button base work primary disabled"
  disabled={true}
  type="button"
>
  <span
    className="base extraBold small uppercase grey"
  >
    Submit
  </span>
</button>
`;

exports[`renders a large Button 1`] = `
<button
  className="button large work primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base uppercase white"
  >
    Add
  </span>
</button>
`;

exports[`renders a learning Button 1`] = `
<button
  className="button base learning primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small uppercase white"
  >
    Submit
  </span>
</button>
`;

exports[`renders a secondary Button 1`] = `
<button
  className="button base work secondary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small uppercase green"
  >
    Submit
  </span>
</button>
`;

exports[`renders a small Button 1`] = `
<button
  className="button small work primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold smaller uppercase white"
  >
    Add
  </span>
</button>
`;

exports[`renders a tertiary Button 1`] = `
<button
  className="button base work tertiary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small uppercase green"
  >
    Submit
  </span>
</button>
`;
